logs/Slang/generated/hdlconv/hdlconvertor_p832.sv.log
name: hdlconvertor_p832
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p832.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p832.sv:1:1: error: expected member
primitive multiplexer (mux, control, dataA, dataB);
^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p832.sv:4:1: error: expected member
table
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p832.sv:7:4: error: expected member
   0       1     1    : 1 ;
   ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p832.sv:8:4: error: expected member
   0       1     x    : 1 ;
   ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p832.sv:9:4: error: expected member
   0       0     0    : 0 ;
   ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p832.sv:10:4: error: expected member
   0       0     1    : 0 ;
   ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p832.sv:11:4: error: expected member
   0       0     x    : 0 ;
   ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p832.sv:12:4: error: expected member
   1       0     1    : 1 ;
   ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p832.sv:13:4: error: expected member
   1       1     1    : 1 ;
   ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p832.sv:14:4: error: expected member
   1       x     1    : 1 ;
   ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p832.sv:15:4: error: expected member
   1       0     0    : 0 ;
   ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p832.sv:16:4: error: expected member
   1       1     0    : 0 ;
   ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p832.sv:17:4: error: expected member
   1       x     0    : 0 ;
   ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p832.sv:18:4: error: expected member
   x       0     0    : 0 ;
   ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p832.sv:19:4: error: expected member
   x       1     1    : 1 ;
   ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p832.sv:20:1: error: expected member
endtable
^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p832.sv:27:1: error: expected member
table
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p832.sv:30:4: error: expected member
   0       0     ?    : 0 ;
   ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p832.sv:31:4: error: expected member
   1       ?     1    : 1 ;
   ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p832.sv:32:4: error: expected member
   1       ?     0    : 0 ;
   ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p832.sv:33:4: error: expected member
   x       0     0    : 0 ;   
   ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p832.sv:34:4: error: expected member
   x       1     1    : 1 ;
   ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p832.sv:35:1: error: expected member
endtable
^~~~~~~~
